# efficient-tune

./: .gitignore  LICENSE  README.md  pyproject.toml
data/math/eval/: cache-ce29ca17d6d09ac3.arrow
efficient_tune/: dataloader.py  evaluate.py  model.py  tensorboard_logger.py
efficient_tune/trainer/: __init__.py  grpo.py  grpo_trainer.py  optimizer.py  sft.py  sft_trainer.py  util_grpo.py  util_sft.py
scripts/: run.py
tests/: adapters.py  conftest.py
